Revert "general overflow fix"
This reverts commit c5e19d7172509bd7a0c5f01765c49350e2174972.

--- a/assets/scss/layouts/_general.scss
+++ b/assets/scss/layouts/_general.scss
@@ -14,8 +14,3 @@
 	@include max-width-scale();
 	@include outer-container();
 }
-
-.site {
-	overflow-x: hidden;
-	width: 100%;
-}
